Bugfix 4218 Selection is a tree may overlap with the item icon

--- a/Website/Composite/styles/default/trees.css
+++ b/Website/Composite/styles/default/trees.css
@@ -59,7 +59,7 @@ ui|treenode ui|labelbox {
 	padding-bottom: 3px;
 }
 ui|treenode ui|labeltext {
-	padding: 2px 4px 3px 4px;
+	padding: 1px 4px 2px 4px;
 	#region vista
 		padding-right: 5px;
 		position: relative;
